<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/diceGroup"
    android:gravity="center_vertical" >
    <TextView
        android:id="@+id/diceCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dice_question"
        android:tag="@string/dice_roll_tag"
        android:visibility="visible"/>
    <Spinner
        android:id="@+id/diceCount"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:tag="@string/dice_roll_tag"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/diceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dice_d6"
        android:tag="@string/dice_roll_tag"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/diceSetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dice_set_label"
        android:tag="@string/dice_set_tag"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/diceSetterValue"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:tag="@string/dice_set_tag"
        android:visibility="gone"/>
</LinearLayout>