<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/debugGroup"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >
    <CheckBox
        android:id="@+id/debugModeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="toggleSetter"
        android:tag="DEBUG_TOGGLE"
        android:text="@string/debug_mode_toggle"/>
    <CheckBox
        android:id="@+id/atkRollSetterCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="toggleSetter"
        android:tag="ATK_ROLL"
        android:text="@string/atk_roll_setter"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/atkChallengeSetterCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="toggleSetter"
        android:tag="ATK_CHALLENGE"
        android:text="@string/atk_challenge_setter"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/defRollSetterCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="toggleSetter"
        android:tag="DEF_ROLL"
        android:text="@string/def_roll_setter"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/defChallengeSetterCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="toggleSetter"
        android:tag="DEF_CHALLENGE"
        android:text="@string/def_challenge_setter"
        android:visibility="gone"/>
</LinearLayout>