<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resultHolder"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >
    <LinearLayout
        android:id="@+id/atkBaseRollResultGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/atkBaseRollResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_roll_result_label"/>
        <TextView
            android:id="@+id/atkBaseRollResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/atkRollBonusResult"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/atkBonusTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_bonus_result_label"/>
        <TextView
            android:id="@+id/atkBonusTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/atkChallengeResultGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/atkChallengeResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_challenge_result_label"/>
        <TextView
            android:id="@+id/atkChallengeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/atkChallengeTotalGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/atkChallengeTotalResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_challenge_total_label"/>
        <TextView
            android:id="@+id/atkRollTotal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/defBaseRollResultGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/defBaseRollResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/def_roll_result_label"/>
        <TextView
            android:id="@+id/defBaseRollResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/defRollBonusResult"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/defBonusTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/def_bonus_result_label"/>
        <TextView
            android:id="@+id/defBonusTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/defChallengeResultGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/defChallengeResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/def_challenge_result_label"/>
        <TextView
            android:id="@+id/defChallengeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/defChallengeTotalGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/defChallengeTotalResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/def_challenge_total_label"/>
        <TextView
            android:id="@+id/defRollTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/defChoiceGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/defOptionChoiceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/no_def_option_label"/>
        <TextView
            android:id="@+id/defOptionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/atkRollTotal2Group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/atkRollTotal2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_total_2_label"/>
        <TextView
            android:id="@+id/atkRollTotal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/atkDamageResult1Group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/atkDamageResult1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_base_damage_label"/>
        <TextView
            android:id="@+id/atkDamageResult1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/atkDamageResult2Group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/atkDamageResult2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/atk_damage_2_label"/>
        <TextView
            android:id="@+id/atkDamageResult2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"/>
    </LinearLayout>
</LinearLayout>